Added more members and fixed sorting.

--- a/members/index.html
+++ b/members/index.html
@@ -72,8 +72,27 @@
                     </div>
                 </div>
             </section>
+
+            <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
+
             <section id="team-section">
                 <h2>Post-docs</h2>
+                <div class="team-member">
+                    <img src="images/pfp.png" alt="Leonardo Bacciottini">
+                    <h3>Leonardo Bacciottini</h3>
+                    <p>???</p>
+                    <p id="bio">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla lacinia posuere consequat.
+                        Integer elementum vel nulla quis vestibulum.
+                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
+                        Aenean at accumsan enim.
+                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    </p>
+                    <div class="links">
+                        <a href="https://scholar.google.com/citations?user=V52MmUkAAAAJ&hl=it">Google Scholar</a> | <a href="https://www.linkedin.com/in/leonardo-bacciottini/?originalSubdomain=it">LinkedIn</a>
+                    </div>
+                </div>
 
                 <div class="team-member">
                     <img src="images/pfp.png" alt="Stav Haldar">
@@ -91,10 +110,12 @@
                         <a href="https://scholar.google.com/citations?user=FUF5AzIAAAAJ&hl=en">Google Scholar</a>
                     </div>
                 </div>
-
             </section>
+
+            <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
+
             <section id="team-section">
-                <h2>Graduate Students</h2>
+                <h2>PhD Students</h2>
 
                 <div class="team-member">
                     <img src="images/pfp.png" alt="Snehasis Addy">
@@ -109,24 +130,7 @@
                         Suspendisse eu faucibus tellus, sit amet elementum nunc.
                     </p>
                     <div class="links">
-                        <a href="#">Homepage</a> | <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/snehasis-addy-b49362166">LinkedIn</a> | <a href="#">GitHub</a>
-                    </div>
-                </div>
-
-                <div class="team-member">
-                    <img src="images/pfp.png" alt="Snehasis Addy">
-                    <h3>Luc Barrett</h3>
-                    <p>Manning College of Information and Computer Sciences</p>
-                    <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
-                    </p>
-                    <div class="links">
-                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a> | <a href="#">GitHub</a>
+                        <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/snehasis-addy-b49362166">LinkedIn</a>
                     </div>
                 </div>
 
@@ -143,7 +147,7 @@
                         Suspendisse eu faucibus tellus, sit amet elementum nunc.
                     </p>
                     <div class="links">
-                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="https://www.linkedin.com/in/meghashrita-das-b02811190">LinkedIn</a> | <a href="#">GitHub</a>
+                        <a href="https://www.linkedin.com/in/meghashrita-das-b02811190">LinkedIn</a>
                     </div>
                 </div>
 
@@ -160,7 +164,8 @@
                         Suspendisse eu faucibus tellus, sit amet elementum nunc.
                     </p>
                     <div class="links">
-                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a>
+                        <a href="#">Links Here</a>
+                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
                     </div>
                 </div>
 
@@ -177,7 +182,25 @@
                         Suspendisse eu faucibus tellus, sit amet elementum nunc.
                     </p>
                     <div class="links">
-                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a>
+                        <a href="#">Links Here</a>
+                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
+                    </div>
+                </div>
+                
+                <div class="team-member">
+                    <img src="images/pfp.png" alt="Luise Prielinger">
+                    <h3>Luise Prielinger</h3>
+                    <p>Delft University of Technology</p>
+                    <p id="bio">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla lacinia posuere consequat.
+                        Integer elementum vel nulla quis vestibulum.
+                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
+                        Aenean at accumsan enim.
+                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    </p>
+                    <div class="links">
+                        <a href="https://scholar.google.com/citations?user=1iVzpXMAAAAJ&hl=en">Google Scholar</a>
                     </div>
                 </div>
 
@@ -194,10 +217,50 @@
                         Suspendisse eu faucibus tellus, sit amet elementum nunc.
                     </p>
                     <div class="links">
-                        <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a>
+                        <a href="#">Links Here</a>
+                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
                     </div>
                 </div>
                 
+                <div class="team-member">
+                    <img src="images/pfp.png" alt="Eric Yau">
+                    <h3>Eric Yau</h3>
+                    <p>Delft University of Technology</p>
+                    <p id="bio">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla lacinia posuere consequat.
+                        Integer elementum vel nulla quis vestibulum.
+                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
+                        Aenean at accumsan enim.
+                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    </p>
+                    <div class="links">
+                        <a href="#">Links Here</a>
+                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
+                    </div>
+                </div>
+            </section>
+
+            <!-- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -->
+            <section id="team-section">
+                <h2>Master Students</h2>
+
+                <div class="team-member">
+                    <img src="images/pfp.png" alt="Snehasis Addy">
+                    <h3>Luc Barrett</h3>
+                    <p>Manning College of Information and Computer Sciences</p>
+                    <p id="bio">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Nulla lacinia posuere consequat.
+                        Integer elementum vel nulla quis vestibulum.
+                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
+                        Aenean at accumsan enim.
+                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    </p>
+                    <div class="links">
+                        <a href="https://www.linkedin.com/in/luc-barrett/">LinkedIn</a>
+                    </div>
+                </div>                
             </section>
         </main>
     </body>
