Added Snehasis's and Ryosuke's info to the members page.

--- a/members/index.html
+++ b/members/index.html
@@ -118,19 +118,21 @@
                 <h2>PhD Students</h2>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Snehasis Addy">
+                    <img src="images/snehasis-addy.jpg" alt="Snehasis Addy">
                     <h3>Snehasis Addy</h3>
-                    <p>Manning College of Information and Computer Sciences</p>
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>Manning College of Information and Computer Sciences</em>
+                    </p>
                     <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                        Snehasis is a CS PhD student at UMass Amherst working with Filip Rozpędek and Gayane Vardoyan on
+                        topics related to Quantum Networks and Distributed Quantum Computing. Snehasis has a master's
+                        degree in physics from the Institute for Quantum Science and Technology at the University of
+                        Calgary, where he specialized in error correction for Quantum Key Distribution using Polar codes,
+                        and a bachelor's degree in ECE from the Indian Institute of Technology Dhanbad.
                     </p>
                     <div class="links">
-                        <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/snehasis-addy-b49362166">LinkedIn</a>
+                        <a href="https://snehasisaddy.github.io/">Homepage</a> | <a href="https://scholar.google.co.in/citations?user=PX3JAV4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/snehasisaddy/">LinkedIn</a> | <a href="https://github.com/snehasisaddy">GitHub</a>
                     </div>
                 </div>
 
@@ -205,21 +207,18 @@
                 </div>
 
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Ryosuke Shiina">
+                    <img src="images/ryosuke-shiina.jpg" alt="Ryosuke Shiina">
                     <h3>Ryosuke Shiina</h3>
-                    <p>College of Natural Sciences</p>
-                    <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>College of Natural Sciences</em>
                     </p>
-                    <div class="links">
-                        <a href="#">Links Here</a>
-                        <!-- <a href="#">Homepage</a> | <a href="#">Google Scholar</a> | <a href="#">LinkedIn</a> | <a href="#">GitHub</a> -->
-                    </div>
+                    <p id="bio">
+                        Ryosuke Shiina is a PhD candidate through the Department of Physics at UMass Amherst. He has been
+                        researching under Filip Rozpedek and has been a graduate student researcher with the Center for Quantum
+                        Networks. He is a quantum network architect, and his main area of research is theory relating to quantum
+                        network schemes, error correction codes such as GKP-code and Cat code, and graph theory.
+                    </p>
                 </div>
                 
                 <div class="team-member">
