Added Leondardo's profile to the site

--- a/members/index.html
+++ b/members/index.html
@@ -150,20 +150,20 @@
             <section id="team-section">
                 <h2>Post-docs</h2>
                 <div class="team-member">
-                    <img src="images/pfp.png" alt="Leonardo Bacciottini">
+                    <img src="images/leonardo-bacciottini.jpg" alt="Leonardo Bacciottini">
                     <h3>Leonardo Bacciottini</h3>
-                    <p>???</p>
-                    <p id="bio">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla lacinia posuere consequat.
-                        Integer elementum vel nulla quis vestibulum.
-                        Nulla cursus felis ante, vitae hendrerit nibh vehicula id.
-                        Aenean at accumsan enim.
-                        Suspendisse eu faucibus tellus, sit amet elementum nunc.
+                    <p>
+                        University of Massachusetts Amherst <br>
+                        <em>Manning College of Information and Computer Sciences</em>
                     </p>
-                    <div class="links">
-                        <a href="https://scholar.google.com/citations?user=V52MmUkAAAAJ&hl=it">Google Scholar</a> | <a href="https://www.linkedin.com/in/leonardo-bacciottini/?originalSubdomain=it">LinkedIn</a>
-                    </div>
+                    <p id="bio">
+                        Leonardo is a post-doc jointly working with
+                        <a class="inline" href="https://acquire.cs.umass.edu/members.html#:~:text=Leonardo%20Bacciottini">Don Towsley</a>
+                        and Gayane Vardoyan. He holds a Ph.D. from the
+                        <a class="inline" href="https://www.unipi.it/index.php/english">University of Pisa</a>, where he also obtained his
+                        M.Sc. degree in Computer Engineering. His research interests include protocols and architectures for entanglement
+                        distribution networks, simulation, and quantum information theory, with a focus on entanglement purification.
+                    </p>
                 </div>
 
                 <div class="team-member">
