fixed personal site

--- a/per/index.html
+++ b/per/index.html
@@ -16,7 +16,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>
-                Agustin Garcia Flores | UMass Fisica
+                Agustin Garcia Flores
         </title>
 
         <link rel="stylesheet" href="style/main.css">
@@ -26,27 +26,18 @@
 		<header class="masthead constrain">
             <div class="masthead__wrapper">
                 <div class="masthead-bar">
-                    <a href="index.html">
+                    <a href="/">
                         <h1 class="masthead-title">Agustin Garcia Flores</h1>
                     </a>
 
                     <div class="masthead-bar__menu">
-        
                         <span class="masthead-bar__menu-item">
-                        <a class="link link--active" href="index.html">Inicio</a>
-                        </span>
-
-                        <span class="masthead-bar__menu-item">
-                        <a class="link" href="conferencias/conferencias.html">Conferencias</a>
+                        <a class="link" href="/talks/">Talks</a>
                         </span>
 
                         <!-- <span class="masthead-bar__menu-item">
-                        <a class="link" href="blog/blog.html"></a>
+                        <a class="link" href="/blog/"></a>
                         </span> -->
-
-                        <span class="masthead-bar__menu-item">
-                        <a class="link" href="en/index.html">English</a>
-                        </span>
                     </div>
                 </div>
             </div>  
@@ -55,33 +46,44 @@
             <div class="about">
 
                 <p class="description">
-                    Estudiante de Posgrado<br>
-                    Departamento de Fisica<br>
-                    Facultad de Ciencias Naturales<br>
-                    Universidad de Massachusetts, Amherst
+                    I am a physics PhD student in the
+                    <a href="https://www.umass.edu/natural-sciences/" target="_blank">College of Natural Sciences</a>
+                    at the
+                    <a href="https://www.umass.edu/" target="_blank">University of Massachusetts Amherst</a>
+                    under the guidance of 
+                    <a href="https://sites.google.com/view/filiprozpedek" target="_blank">Filip Rozpędek</a>.
+                    My research interests pertain to
+                    <a href="https://arxiv.org/html/2402.15707v1" target="_blank">quantum communication</a>,
+                    namely
+                    <a href="https://www.nature.com/articles/s42005-022-01123-7" target="_blank">satellite-based quantum networks</a>.
                 </p>
 
-                <h3>Intereses de investigación</h3>
-                <p>
-                    Información cuántica, redes cuánticas y criptografía cuántica<br>
+                <p class="description">
+                    I was born in
+                    <a href="https://en.wikipedia.org/wiki/Zacatecas" target="_blank">Zacatecas</a>
+                    and raised in
+                    <a href="https://en.wikipedia.org/wiki/Arizona" target="_blank">Arizona</a>.
+                    In my free time,
+                    I enjoy talking to my family and friends back
+                    <a href="/images/diana-alarcon.pdf" target="_blank">home</a>.
                 </p>
 
-                <h3>Educación</h3>
+                <h3>Short Education History</h3>
                 <p>
                     <img src="images/asu.png" alt="ASU" class="logo">
-                    Universidad Estatal de Arizona, Mayo de 2024<br>
-                    B.S., Departamento de Fisica<br>
-                    B.A., Facultad de Ciencias Matemáticas y Estadísticas
+                    <strong>Arizona State University</strong>, May 2024<br>
+                    B.Sc., Department of Physics<br>
+                    B.A., School of Mathematical and Statistical Sciences
                 </p>
                 <p>
                     <img src="images/emcc.png" alt="EMCC" class="logo">
-                    Colegio Comunitario Estrella Montaña, Diciembre de 2019<br>
-                    Asociado en Negocios, Requisitos Generales
+                    <strong>Estrella Mountain Community College</strong>, December 2019<br>
+                    Associate in Business, General Requirements
                 </p>
 
-                <h3>Contacto</h3>
+                <h3>Contact</h3>
                 <p>
-                <strong>Correo electrónico:</strong> agarciaflore [arroba] umass [punto] edu<br>
+                <strong>Email:</strong> agarciaflore [at] umass.edu<br>
                 </p>
             </div>
         </main>
